ensure first paragraph in a quote doesn't alter spacing

--- a/css/sass/framework/base/_quotes.scss
+++ b/css/sass/framework/base/_quotes.scss
@@ -81,6 +81,10 @@ blockquote{
      */
     text-indent:-0.41em;
 
+    p:first-of-type{
+        margin-top:0;
+    }
+
     p:last-of-type{
         margin-bottom:0;
     }
